Move email and timeframe as query params for delete endpoints
